@@ -46,6 +46,7 @@ private:
         WebCore::PluginInfo info;
 #if PLATFORM(MAC)
         cpu_type_t pluginArchitecture;
+        WebCore::String bundleIdentifier;
         unsigned versionNumber;
 #endif
     };
