@@ -1,3 +1,15 @@
+2010-06-22  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Implement PluginInfoStore::shouldUsePlugin.
+
+        * UIProcess/Plugins/PluginInfoStore.h:
+        * UIProcess/Plugins/mac/PluginInfoStoreMac.mm:
+        (WebKit::PluginInfoStore::getPluginInfo):
+        (WebKit::PluginInfoStore::shouldUsePlugin):
+        * WebKit2.xcodeproj/project.pbxproj:
+
 2010-06-21  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Sam Weinig.
